small fix on mobile width

--- a/src/pages/stack/stack.css
+++ b/src/pages/stack/stack.css
@@ -89,11 +89,11 @@ h3 {
 
 @media only screen and (max-width: 800px) {
   .stack-items-wrap {
-    width: 90vw;
+    width: 100vw;
     margin-top: 1.5em;
   }
   .stack-items-wrap svg {
-    padding-inline: 3em;
+    padding-inline: 0.5em;
     padding-top: 2em;
   }
 }
